Added big crafts, clearconfig, reloadconfig; upgradable generator can be placed below